Changelog for s6-rc.

In 0.5.2.3
----------

 - Bugfixes.


In 0.5.2.2
----------

 - Bugfixes.


In 0.5.2.1
----------

 - Adaptation to skalibs-2.10.0.0, execline-2.7.0.0 and s6-2.10.0.0


In 0.5.2.0
----------

 - "Essential services" support with the flag-essential file
and the new -D option to s6-rc.


In 0.5.1.4
----------

 - Bugfixes.


In 0.5.1.3
----------

 - Bugfixes.


In 0.5.1.2
----------

 - Bugfixes.


In 0.5.1.1
----------

 - Bugfixes.


In 0.5.1.0
----------

 - Adaptation to skalibs-2.9.0.0 and s6-2.9.0.0.


In 0.5.0.0
----------

 - Adaptation to skalibs-2.8.0.0 and s6-2.8.0.0.
 - Bugfixes.
 - s6-rc-compile doesn't support -u and -g anymore; the user who
can run s6-rc on a database is the user who owns the supervision tree.
 - Everything builds as PIC by default.


In 0.4.1.0
----------

 - Adaptation to skalibs-2.7.0.0 and s6-2.7.2.0.
 - Support for max-death-tally and down-signal files in a
longrun definition directory.


In 0.4.0.1
----------

 - Improved portability to (guess what) OpenBSD


In 0.4.0.0
----------

 - s6-rc-compile now accepts several producers in a consumer-for file.
All the producers for a service will write to the same pipe. In other
words: pipelines are now funnels.
 - The pipeline-name file, defining the name of a bundle containing
all the services in a pipeline, must now be place in the definition
directory of the last consumer in the pipeline, instead of the definition
directory of the first producer (since the latter is not unique
anymore).
 - All service databases must be edited and recompiled.
 - New tool: s6-rc-format-upgrade, to handle the upgrade to the new
compiled format.


In 0.3.0.0
----------

 - s6-rc-init now takes a -p option that adds a prefix to the symbolic links
created in the scandir to manage longruns. This allows the user to use the
same scandir for several s6-rc databases and live directories without risking
conflicts, if the prefixes are unique enough.