@@ -48,12 +48,12 @@ scripts are also run in a controlled environment.
  <li> A POSIX-compliant system with a standard C development environment </li>
  <li> GNU make, version 3.81 or later </li>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a> version
-2.10.0.3 or later. It's a build-time requirement. It's also a run-time
+2.11.0.0 or later. It's a build-time requirement. It's also a run-time
 requirement if you link against the shared version of the skalibs library. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a> version
-2.8.0.1 or later. It's a build-time <em>and</em> run-time requirement. </li>
+2.8.1.0 or later. It's a build-time <em>and</em> run-time requirement. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a> version
-2.10.0.3 or later. It's a build-time <em>and</em> run-time requirement. </li>
+2.11.0.0 or later. It's a build-time <em>and</em> run-time requirement. </li>
 </ul>
 
 <h3> Licensing </h3>
