@@ -33,7 +33,12 @@ minor and bugfix version changes.
 <h2> in 0.5.2.3 </h2>
 
 <ul>
- <li> No functional changes. </li>
+ <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
+dependency bumped to 2.11.0.0. </li>
+ <li> <a href="//skarnet.org/software/execline/">execline</a>
+dependency bumped to 2.8.1.0. </li>
+ <li> <a href="//skarnet.org/software/s6/">s6</a>
+dependency bumped to 2.11.0.0. </li>
 </ul>
 
 <h2> in 0.5.2.2 </h2>
