@@ -232,7 +232,7 @@ int main (int argc, char const **argv)
   int blocking = 0 ;
   PROG = "s6-rc-bundle" ;
   {
-    subgetopt_t l = SUBGETOPT_ZERO ;
+    subgetopt l = SUBGETOPT_ZERO ;
     for (;;)
     {
       int opt = subgetopt_r(argc, argv, "fl:c:b", &l) ;
