@@ -1461,7 +1461,7 @@ int main (int argc, char const *const *argv)
   int blocking = 0 ;
   PROG = "s6-rc-compile" ;
   {
-    subgetopt_t l = SUBGETOPT_ZERO ;
+    subgetopt l = SUBGETOPT_ZERO ;
     for (;;)
     {
       int opt = subgetopt_r(argc, argv, "v:u:g:h:b", &l) ;
