@@ -3,6 +3,7 @@ Changelog for s6-rc.
 In 0.5.2.3
 ----------
 
+ - Adaptation to skalibs-2.11.0.0.
  - Bugfixes.
 
 
